fix Error: Horizontal overflow when screen-size of 393*732px

--- a/src/style.css
+++ b/src/style.css
@@ -109,6 +109,16 @@ footer {
 }
 
 @media screen and (max-width: 550px) {
+  nav{
+    padding-left: 2%;
+    font-size: inherit;
+    width: 100%;
+  }
+
+  #footer {
+    font-size: 1rem;
+  }
+
   .main-general-container {
     grid-template-columns: 1fr;
   }
